force-app/main/default/objects/Action_Plan__c/fields/Action_Plan_Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Template Version</label>
    <referenceTo>Action_Plan_Template_Version__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>