force-app/main/default/objects/Action_Plan__c/fields/ActionPlanState__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanState__c</fullName>
    <label>ActionPlanState</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>