force-app/main/default/objects/Action_Plan__c/fields/IsUsingHolidayHours__c.field-meta.xml
<CustomField>
    <fullName>IsUsingHolidayHours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUsingHolidayHours</label>
    <type>Checkbox</type>
</CustomField>